# ATS

./: .coveragerc  .gitignore  Dockerfile  README.md  atsServer.py  ats_system.py  ats_system_documentation.md  clean-macos-trash.sh  docker-compose.yml  index.html  jd_keywords.json  main.py  missing_keywords_analysis.json  ml_ats_system_documentation.md  ml_response.json  optimized_ats_report.json  optimized_ats_report_with_keywords.json  pyproject.toml  pytest.ini  render.yaml  requirements.txt  revamped_ats_report.json  test_api.py  test_ats_server.py  test_ats_system.py  ultimate_ml_ats_prompt.yaml
.github/workflows/: ci-cd.yml
randoms/: jd.txt  ml_ats_scorer.py  ml_optimized_prompt.yaml
